<resources>
    <string name="app_name">MessageBoardApp</string>

    <!--Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои Объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">ПК</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="ac_open">Open</string>
    <string name="ac_close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <!-- Sign Dialog -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verify_error">Не удалось отправить письмо для верификации</string>
    <string name="send_verify_done">Подтвердите регистрацию в письме на вашей почте</string>
    <string name="email_reset_password_send">Письмо для сброса пароля отправлено</string>
    <string name="dialog_reset_email_massage">Для восстановления пароля укажите Ваш email</string>
    <string name="link_email_to_google">Email успешно связан с Google аккаунтом</string>
    <string name="The_account_already_exists">Аккаунт уже существует!</string>
    <string name="min_password">Слабый пароль! Используйте пароль с минимум 6 символами</string>
    <string name="wrong_email_format">Не правильный формат Email</string>
    <string name="wrong_format_or_email">Не правильный Email или формат Email</string>
    <string name="wrong_password_or_email">Неверный пароль или Email</string>
    <string name="enter_into_acc_or_use_google">Войдите в аккаунт или используйте вход с помощью Google</string>
    <string name="sign_in_done">Вы успешно зарегистрировались.</string>

    <!-- Edit activity -->
    <string name="select_country">🌎 Выберете страну</string>
    <string name="select_city">🏬 Выберете город</string>
    <string name="no_country_selected">Страна не выбрана</string>

    <!-- menu_choose_image -->
    <string name="delete_images">удалить картинки</string>
    <string name="add_image">добавить картинку</string>

    <!-- title_image_array -->
    <string name="title_equipment">Экипировка</string>
    <string name="title_talents">Таланты</string>
    <string name="title_fight_result">Результат боя</string>
    <string name="enter_in_akk_successful">Вы вошли в аккаунт.</string>
    <string name="user_not_found">Пользователь не найден. Зарегистрируйтесь!</string>
</resources>